[package]
name = "tikv-client"
version = "0.0.0"
authors = ["Tyler Neely <t@jujit.su>",
           "Carl Lerche <me@carllerche.com>",
           "Armin Ronacher <armin.ronacher@active-4.com>"]

[dependencies]
log = "0.3.6"
mio = { git = "https://github.com/carllerche/mio", branch = "dev" }
tokio = { git = "https://github.com/tokio-rs/tokio" }
futures = "0.1.0"

[dependencies.tipb]
git = "https://github.com/pingcap/tipb.git"

[dev-dependencies]
env_logger = "0.3.0"

[dependencies.kvproto]
git = "https://github.com/pingcap/kvproto"

